--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
     "private": true,
-    "workspaces": ["site"],
+    "workspaces": [
+      "site",
+      "gatsby-theme-shared-nav"
+    ],
     "scripts": {
       "develop": "yarn workspace site develop",
       "build": "yarn workspace site build"
